--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -144,16 +144,24 @@
 <!-- end::navigation-logo -->
 
 <div class="navigation-menu-group">
-  {% if perms.mrp.can_operator_mrp %}
+  {% if perms.mrp.can_operator_mrp or perms.mrp.is_supervisor_user %}
   <div id="dashboards">
     <ul>
       <li class="navigation-divider">اطلاعات</li>
+      {% if perms.mrp.can_operator_mrp %}
       <li><a href="{% url 'list_dashboard' %}">داشبورد</a></li>
+  {% endif %}
+  {% if perms.mrp.can_operator_mrp or perms.mrp.is_supervisor_user %}
+      
       <li><a href="{% url 'register_daily_amar' %}">ورود اطلاعات روزانه</a></li>
 
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه</a></li>
+      <li><a href="{% url 'calendar_main_scroll' %}">مشاهده آمار روزانه با اسکرول</a></li>
+  {% endif %}
+  {% if perms.mrp.can_operator_mrp %}
+
       {% comment %} <li><a href="{% url 'calendar_randeman_brief' %}">راندمان روزانه تولید</a></li> {% endcomment %}
-      {% comment %} <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li> {% endcomment %}
+       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li> 
       <li><a href="{% url 'monthly_detaild_report_ezami' %}">سرانه تولید</a></li>
       {% comment %} <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li> {% endcomment %}
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
@@ -165,7 +173,7 @@
       </a></li>
       {% comment %} <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li> {% endcomment %}
 
-
+  {% endif %}
 
 
     </ul>
