--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/nezafatpadash_v2/partialNezafatPadashUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/nezafatpadash_v2/partialNezafatPadashUpdate.html
@@ -1,5 +1,5 @@
 
-<form method="post" action="{% url 'tolidPadash_update_v2' form.instance.id  %}" class="js-tolidPadash-update-form" autocomplete="off">
+<form method="post" action="{% url 'nezafatPadash_update_v2' form.instance.id  %}" class="js-tolidPadash-update-form" autocomplete="off">
     {% csrf_token %}
     <div class="modal-header bg-primary" >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
