--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialAssetRandemanList.html
@@ -5,6 +5,7 @@
 
   <td>
     <button type="button" class="btn btn-outline-light js-update-assetRandeman" data-url="{% url 'assetRandeman_update' i.id %}" >  <i class="ti-eye"></i></button>
+    <button type="button" class="btn btn-outline-light js-update-assetRandemanRanking bg-info" data-url="{% url 'assetRandeman_nezafat_ranking_v2' i.id %}" >  <i class="ti-list-ol"></i></button>
     <button type="button" class="btn btn-outline-light js-update-assetRandemanRanking" data-url="{% url 'assetRandeman_nezafat_ranking' i.id %}" >  <i class="ti-list-ol"></i></button>
     <button type="button" class="btn btn-outline-light js-update-assetRandemanRanking" data-url="{% url 'assetRandeman_padash_ranking' i.id %}" >  <i class="ti-list-ol"></i></button>
     <a href="{% url 'get_monthly_workbook' %}?mah={{i.mah}}&sal={{i.sal}}" type="button" class="btn btn-outline-light js-view-workbook" target="_blank" >  <i class="ti-bar-chart-alt"></i></a>
