--- a/tiny_mrp/mrp/templates/mrp/financial_profile/partial_profile_list.html
+++ b/tiny_mrp/mrp/templates/mrp/financial_profile/partial_profile_list.html
@@ -12,6 +12,7 @@
       <a target="_blank" class="btn btn-outline-light js-padash_tolid-profile" href="{% url 'list_tolid_padash_v2' %}?profile={{profile.id}}">  <i class="ti-crown"></i></a>
       <a target="_blank" class="btn btn-outline-light js-padash_tolid-profile" href="{% url 'list_tolid_padash' %}?profile={{profile.id}}">  <i class="ti-crown"></i></a>
       <a target="_blank" class="btn btn-outline-light js-nezafat_tolid-profile" href="{% url 'list_nezafat_padash'%}?profile={{profile.id}}">  <i class="ti-brush-alt"></i></a>
+      <a target="_blank" class="btn btn-outline-light js-nezafat_v2_tolid-profile" href="{% url 'list_nezafat_padash_v2'%}?profile={{profile.id}}">  <i class="ti-brush-alt"></i></a>
       <a target="_blank" class="btn btn-outline-light js-init-profile" href="{% url 'get_init_asset_randeman'%}?profile={{profile.id}}">  <i class="ti-settings"></i></a>
       <button type="button" class="btn btn-outline-light js-update-profile" data-url="{% url 'profile_update' profile.id %}" >  <i class="ti-eye"></i></button>
 
