--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList_v3.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList_v3.html
@@ -66,6 +66,7 @@ table.table-bordered td {
                 <h5 class="card-title"></h5>
 
                 {% for i in shift_list %}
+                
                 <div class="row mb-5">
                     <div class="col text-center">
                         <h3 style="font-family: 'iransans-bold'">
@@ -232,8 +233,11 @@ table.table-bordered td {
                         </table>
                     </div>
                 </div>
-                <hr/>
+                <hr class="opacity-0 my-4">
+                <hr class="opacity-0 my-4">
+                <hr class="opacity-0 my-4">
                 {% endfor %}
+             
 
                 <p>
                     <div class="row">
