--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
@@ -154,7 +154,10 @@
                                 {% if company.status == "Pending" and perms.mrp.can_edit_purchase %}
                                 <th> عملیات</th>
                                 {% endif%}
-                                <th>سوابق</th>
+                                  {% if perms.mrp.can_view_purchase_history %}
+                                  <th>سوابق</th>
+                                    {% endif %}
+                              
 
                                 
                             </tr>
@@ -169,7 +172,7 @@
                                 <td  class="editable-cell description" data-id="">{{i.description}}</td>
                                 <td  class="editable-cell " data-id="">
 
-                                {% if request.user|in_group:"director" %}
+                                    {% if perms.mrp.can_view_purchase_history %}
                                     <button type="button" class="btn btn-history btn-sm" onclick="showHistory({{i.item_name.id}}, '{{i.item_name.partName}}')">
                                         <i class="fa fa-history"></i> مشاهده سابقه
                                     </button>
@@ -194,7 +197,9 @@
                                     </button>
                                 </td>
                                 <td>
-                                    {% if request.user|in_group:"director" %}
+                                    {% if perms.mrp.can_view_purchase_history %}
+                                   
+
                                     <button type="button" class="btn btn-history btn-sm" onclick="showHistory({{i.item_name.id}}, '{{i.item_name.partName}}')">
                                         <i class="fa fa-history"></i> مشاهده سابقه
                                     </button>
@@ -209,11 +214,14 @@
                                 <td  class="editable-cell">{{i.quantity}}</td>
                                 <td  class="editable-cell machine-name" data-id="{{i.consume_place.id}}" data-machinecode="{{i.consume_place.assetCode}}">{{i.consume_place.assetName}}</td>
                                 <td  class="editable-cell description" data-id="">{{i.description}}</td>
-                                <td>
+
+                                 {% if perms.mrp.can_view_purchase_history %}
+                                
+
                                     <button type="button" class="btn btn-history btn-sm" onclick="showHistory({{i.item_name.id}}, '{{i.item_name.partName}}')">
                                         <i class="fa fa-history"></i> مشاهده سابقه
                                     </button>
-                                </td>
+                                    {% endif %}
                             </tr>
                             {% endfor %}
                             {% endif %}
