--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -42,6 +42,10 @@
             title="save">
              <i data-feather="save"></i>
          </a>
+         <a href="#" class="btn btn-outline-light ml-2 "  data-toggle="tooltip" id="saveDraft"
+            title="draft">
+             <i data-feather="clock"></i>
+         </a>
             
            
            
