moshakhase and counter init

--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -217,6 +217,12 @@
 
         </a>
       </li>
+      <li>
+        <a href="{% url 'moshakhase_list' %}">
+          <span>مشخصات</span>
+
+        </a>
+      </li>
    
       
 
